// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dual 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.24.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "3.0.0",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "5.6.0",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "4.1.1",
        "old": "0.0.0",
      },
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta-deprecated",
        "old": "3.1.0",
      },
      "prismjs": {
        "info": "https://github.com/PrismJS/prism",
        "new": "1.29.0",
        "old": "1.0.0",
      },
      "react": {
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.3.1",
        "old": "18.0",
      },
      "styled-components": {
        "info": "https://github.com/styled-components/styled-components",
        "new": "6.1.11",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.1",
        "old": "^3.0.0",
      },
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.24.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "^16.1.1",
        "old": "^1.0.0",
      },
    },
  },
  "pypi": {
    "dependencies": {
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "tool.poetry.group.dev.dependencies": {
      "PyYAML": {
        "info": "https://github.com/yaml/pyyaml",
        "new": "6.0",
        "old": "6.0",
      },
      "djlint": {
        "info": "https://github.com/Riverside-Healthcare/djlint",
        "new": "1.31.0",
        "old": "1.30.0",
      },
    },
  },
}
`;

exports[`dual 2 1`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta-deprecated",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`exclude 1`] = `
{
  "npm": {
    "dependencies": {
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
  },
}
`;

exports[`exclude 2 1`] = `
{
  "npm": {
    "dependencies": {
      "react": {
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.3.1",
        "old": "18.0",
      },
    },
  },
}
`;

exports[`exclude 3 1`] = `
{
  "npm": {
    "dependencies": {
      "gulp-sourcemaps": {
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "3.0.0",
        "old": "2.0.0",
      },
    },
  },
}
`;

exports[`exclude 4 1`] = `
{
  "npm": {
    "dependencies": {
      "gulp-sourcemaps": {
        "info": "https://github.com/floridoo/gulp-sourcemaps",
        "new": "2.0.1",
        "old": "2.0.0",
      },
    },
  },
}
`;

exports[`greatest 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.24.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "3.0.0",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "5.6.0",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "4.1.1",
        "old": "0.0.0",
      },
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.1.4",
        "old": "3.1.0",
      },
      "prismjs": {
        "info": "https://github.com/PrismJS/prism",
        "new": "1.29.0",
        "old": "1.0.0",
      },
      "react": {
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.3.1",
        "old": "18.0",
      },
      "styled-components": {
        "info": "https://github.com/styled-components/styled-components",
        "new": "6.1.11",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.1",
        "old": "^3.0.0",
      },
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.24.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "^16.1.1",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`include 1`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta-deprecated",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`include 2 1`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta-deprecated",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`include 3 1`] = `
{
  "npm": {
    "dependencies": {
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta-deprecated",
        "old": "3.1.0",
      },
    },
  },
}
`;

exports[`latest 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.24.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "3.0.0",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "5.6.0",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "4.1.1",
        "old": "0.0.0",
      },
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta-deprecated",
        "old": "3.1.0",
      },
      "prismjs": {
        "info": "https://github.com/PrismJS/prism",
        "new": "1.29.0",
        "old": "1.0.0",
      },
      "react": {
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.3.1",
        "old": "18.0",
      },
      "styled-components": {
        "info": "https://github.com/styled-components/styled-components",
        "new": "6.1.11",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.1",
        "old": "^3.0.0",
      },
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.24.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "^16.1.1",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`patch 1`] = `
{
  "npm": {
    "dependencies": {
      "gulp-sourcemaps": {
        "info": "https://github.com/floridoo/gulp-sourcemaps",
        "new": "2.0.1",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "4.0.4",
        "old": "4.0.0-alpha.2",
      },
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.1.4",
        "old": "3.1.0",
      },
      "svgstore": {
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.1",
        "old": "^3.0.0",
      },
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "resolutions": {
      "versions/updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "^1.0.6",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`prerelease 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "8.0.0-alpha.8",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "3.0.0",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "5.6.0",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "4.1.1",
        "old": "0.0.0",
      },
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.2.0-beta-deprecated",
        "old": "3.1.0",
      },
      "prismjs": {
        "info": "https://github.com/PrismJS/prism",
        "new": "1.29.0",
        "old": "1.0.0",
      },
      "react": {
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "19.0.0-rc-4c2e457c7c-20240522",
        "old": "18.0",
      },
      "styled-components": {
        "info": "https://github.com/styled-components/styled-components",
        "new": "6.1.11",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.1",
        "old": "^3.0.0",
      },
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~8.0.0-alpha.8",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "^16.1.1",
        "old": "^1.0.0",
      },
    },
  },
}
`;

exports[`pypi 1`] = `
{
  "pypi": {
    "tool.poetry.group.dev.dependencies": {
      "PyYAML": {
        "info": "https://github.com/yaml/pyyaml",
        "new": "6.0",
        "old": "6.0",
      },
      "djlint": {
        "info": "https://github.com/Riverside-Healthcare/djlint",
        "new": "1.31.0",
        "old": "1.30.0",
      },
    },
  },
}
`;

exports[`release 1`] = `
{
  "npm": {
    "dependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "7.24.5",
        "old": "7.0.0",
      },
      "gulp-sourcemaps": {
        "info": "https://github.com/gulp-sourcemaps/gulp-sourcemaps",
        "new": "3.0.0",
        "old": "2.0.0",
      },
      "html-webpack-plugin": {
        "info": "https://github.com/jantimon/html-webpack-plugin",
        "new": "5.6.0",
        "old": "4.0.0-alpha.2",
      },
      "jpeg-buffer-orientation": {
        "info": "https://github.com/fisker/jpeg-buffer-orientation",
        "new": "4.1.1",
        "old": "0.0.0",
      },
      "noty": {
        "info": "https://github.com/needim/noty",
        "new": "3.1.4",
        "old": "3.1.0",
      },
      "prismjs": {
        "info": "https://github.com/PrismJS/prism",
        "new": "1.29.0",
        "old": "1.0.0",
      },
      "react": {
        "info": "https://github.com/facebook/react/tree/HEAD/packages/react",
        "new": "18.3.1",
        "old": "18.0",
      },
      "styled-components": {
        "info": "https://github.com/styled-components/styled-components",
        "new": "6.1.11",
        "old": "2.5.0-1",
      },
      "svgstore": {
        "info": "https://github.com/svgstore/svgstore",
        "new": "^3.0.1",
        "old": "^3.0.0",
      },
      "updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "537ccb7",
        "old": "6941e05",
      },
    },
    "peerDependencies": {
      "@babel/preset-env": {
        "info": "https://github.com/babel/babel/tree/HEAD/packages/babel-preset-env",
        "new": "~7.24.5",
        "old": "~6.0.0",
      },
    },
    "resolutions": {
      "versions/updates": {
        "info": "https://github.com/silverwind/updates",
        "new": "^16.1.1",
        "old": "^1.0.0",
      },
    },
  },
}
`;
